fix scrolling in firefox: ff doesn't support overflow-y:overlay

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -746,7 +746,8 @@ tr.tombstone {
 }
 
 .overflowYOverlay {
-    overflow-y: overlay;
+    overflow-y: auto; // set auto by default
+    overflow-y: overlay; // if possible, use 'overlay' (even though its deprecated)
 }
 
 /* tr td:nth-child(1) {
